2008-07-19  Matthias Clasen  <mclasen@redhat.com>

	543504 – crash in Epiphany Web Browser: Opening local file

	* gappinfo.c:
	* gasyncresult.c:
	* gdesktopappinfo.c:
	* gdrive.c:
	* gfile.c:
	* gicon.c:
	* gloadableicon.c:
	* gmount.c:
	* gseekable.c:
	* gvolume.c: Register types thread-safely.
	Patch by Christian Persch

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gcontenttype.c: Remove debug spew

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 543560 – enable gio-FEN back-end warnings on Solaris will crash
	any applications

	* fen/fen-kernel.c: Remove a warning that was causing
	crashes. Reported by Lin Ma.

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 543040 – async reading on dummy file will crash on
	GIO_USE_VFS=local

	* gfile.c (open_read_async_thread): Cope with read_fn being
	NULL. Reported by Lin Ma.  

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols:
	* gcontenttype.[hc]: Add g_content_type_guess_for_tree().

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	* gvfs.h:
	* gdesktopappinfo.h: 
	* giomodule.c: Rename a chapter id to avoid filename conflict.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 540616 – mem leak in filechooser button

	* gunixvolumemonitor.c (get_mount_for_mount_path): Free
	the mount entry. Reported by Chrisitan Persch

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	* gfile.c: Small documentation fixes.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	* gunixmounts.c: Use g_strcmp0 instead of rolling our own.

2008-07-08  Matthias Clasen  <mclasen@redhat.com>

	* gvolumemonitor.c:
	* gfile.c:
	* gvolume.c:
	* gmount.c: Documentation improvements.

2008-07-08  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols:
	* gmount.[hc]: Add g_mount_guess_content_type(). 

2008-07-06  David Zeuthen  <davidz@redhat.com>

	* gio.symbols:
	* gvolume.[ch]: Add new method g_volume_get_activation_root(). This
	is needed for easily handling adoption of foreign volumes by